# CytoScnPy

./: .gitignore  .pre-commit-config.yaml  .typos.toml  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DANGEROUS_CODE.md  Dockerfile  HISTORY.md  PUBLISHING.md  README.md  ROADMAP.md  Security.md  action.yml  clippy.toml  deny.toml  index.html  install.ps1  install.sh  lcov.info  mkdocs.yml  plissken.toml  pyproject.toml  requirements-dev.txt  sitemap.xml
.cargo/: config.toml
.github/workflows/: benchmark.yml  ci.yml  coverage-validation.yml  coverage.yml  dependency-review.yml  docs.yml  generate-pgo-profiles.yml  lint.yml  mcp-release.yml  nightly.yml  publish.yml  rust-ci.yml  rust-llvm-cov.yml  security.yml  semgrep.yml  test-action.yml  test-ci.yml  vscode-binaries.yml
CLI/: index.html
benchmark/: BENCHMARKING_SETUP.md  BENCHMARK_REPORT.md  README.md  analyze_fp_fn.py  baseline_linux.json  baseline_results.json  baseline_win32.json  benchmark_and_verify.py  comparison.json  comparison.md  current_run_linux.json  requirements.txt  results_large_django.json  results_massive_tensorflow.json  results_medium_fastapi.json  results_small_requests.json  results_tiny_flask.json  run_benchmarks.py  verify_ground_truth.py
blog/: index.html
conductor/: tech-stack.md
contributing/: index.html
cytoscnpy/: Cargo.toml  README.md
cytoscnpy-cli/: Cargo.toml  README.md
cytoscnpy-cli/src/: main.rs
cytoscnpy-mcp/: Cargo.toml  README.md
cytoscnpy-mcp/scripts/: test_mcp_server.py
cytoscnpy-mcp/src/: lib.rs  main.rs  tools.rs
cytoscnpy-mcp/tests/: mcp_server_test.rs
cytoscnpy/examples/: heap_profile.rs
cytoscnpy/src/: cli.rs  commands.rs  complexity.rs  config.rs  constants.rs  entry_point.rs  framework.rs  halstead.rs  ipynb.rs  lib.rs  linter.rs  main.rs  metrics.rs  output.rs  python_bindings.rs  raw_metrics.rs  test_utils.rs  utils.rs  visitor.rs
cytoscnpy/src/analyzer/: aggregation.rs  builder.rs  heuristics.rs  mod.rs  processing.rs  single_file.rs  traversal.rs  types.rs  utils.rs
cytoscnpy/src/analyzer/semantic/: graph.rs  impact.rs  imports.rs  mod.rs  reachability.rs
cytoscnpy/src/analyzer/semantic/adapters/: autofix.rs  metrics.rs  mod.rs  taint.rs
cytoscnpy/src/cfg/: flow.rs  mod.rs
cytoscnpy/src/clones/: confidence.rs  config.rs  hasher.rs  mod.rs  normalizer.rs  parser.rs  similarity.rs  types.rs
cytoscnpy/src/commands/: cc.rs  clones.rs  fix.rs  hal.rs  impact.rs  init.rs  mi.rs  mod.rs  raw.rs  stats.rs  utils.rs
cytoscnpy/src/cst/: comments.rs  mapper.rs  mod.rs  parser.rs
cytoscnpy/src/fix/: mod.rs  rewriter.rs
cytoscnpy/src/graph/: symbols.rs
cytoscnpy/src/metrics/: cognitive_complexity.rs  lcom4.rs  mod.rs
cytoscnpy/src/report/: assets.rs  generator.rs  github.rs  gitlab.rs  junit.rs  markdown.rs  mod.rs  sarif.rs  templates.rs
cytoscnpy/src/rules/: danger.rs  ids.rs  mod.rs  quality.rs  secrets.rs
cytoscnpy/src/rules/danger/: code_execution.rs  crypto.rs  deserialization.rs  filesystem.rs  frameworks.rs  injection.rs  misc.rs  mod.rs  network.rs  taint_aware.rs  type_inference.rs  utils.rs
cytoscnpy/src/rules/quality/: best_practices.rs  complexity.rs  finding.rs  maintainability.rs  mod.rs
cytoscnpy/src/rules/quality/performance/: collections.rs  exception_flow.rs  global_usage.rs  io.rs  loop_hoisting.rs  memory.rs  mod.rs  regex.rs  string_concat.rs  tuple_over_list.rs  usage_scan.rs
cytoscnpy/src/rules/secrets/: mod.rs  patterns.rs  recognizers.rs  scoring.rs
cytoscnpy/src/rules/secrets/scoring/: detection.rs  mod.rs  tests.rs
cytoscnpy/src/taint/: analyzer.rs  call_graph.rs  crossfile.rs  interprocedural.rs  intraprocedural.rs  mod.rs  propagation.rs  sinks.rs  sources.rs  summaries.rs  types.rs
cytoscnpy/src/taint/sources/: attr_checks.rs  call_checks.rs  fastapi.rs  mod.rs  subscript_checks.rs  utils.rs
cytoscnpy/src/utils/: mod.rs  paths.rs
cytoscnpy/templates/: base.html  dashboard.html  file_view.html  files.html  issues.html
cytoscnpy/tests/: absolute_path_test.rs  accuracy_improvements_test.rs  accuracy_test.rs  adapters_test.rs  additional_coverage_test.rs  analysis_test.rs  analyze_code_secrets_test.rs  analyzer_test.rs  analyzer_types_test.rs  azure_functions_test.rs  call_graph_coverage_test.rs  cascading_dead_code_test.rs  categories_test.rs  class_context_test.rs  class_parity_test.rs  cli_error_test.rs  cli_flags_test.rs  cli_json_test.rs  cli_metrics_test.rs  cli_semantic_test.rs  clones_command_test.rs  clones_integration_test.rs  clones_test.rs  commands_test.rs  complex_dynamic_test.rs  complex_real_data_test.rs  complexity_test.rs  comprehensive_cli_test.rs  config_test.rs  constants_test.rs  coverage_gap_test.rs  danger_config_test.rs  danger_coverage_test.rs  decorator_finding_test.rs  dynamic_patterns_test.rs  edge_cases_test.rs  entry_point_cli_test.rs  entry_point_test.rs  extensive_security_test.rs  fix_suggestion_test.rs  (+73 more)
cytoscnpy/tests/python_files/: coverage_corpus.py  danger_corpus.py  extensive_security_corpus.py  performance_corpus.py  suppression_case.py
cytoscnpy/tests/python_files/scope/: classes.py
cytoscnpy/tests/snapshots/: output_snapshot_test__github_output.snap  output_snapshot_test__gitlab_output.snap  output_snapshot_test__json_output.snap  output_snapshot_test__junit_output.snap  output_snapshot_test__markdown_output.snap  output_snapshot_test__sarif_output.snap  output_snapshot_test__text_output.snap
danger/best-practices/: index.html
danger/code-execution/: index.html
danger/cryptography/: index.html
dangerous-code/: index.html
docs/: CLI.md  api.md  contributing.md  dangerous-code.md  history.md  index.md  integrations.md  migration.md  pre-commit.md  quality.md  roadmap.md  security.md  usage.md
integrations/: index.html
migration/: index.html
pre-commit/: index.html
quality/: index.html
roadmap/: index.html
scripts/: README.md  build_pgo.ps1  build_pgo.sh  coverage.ps1  coverage.sh  load-pgo-profile.ps1  load-pgo-profile.sh  validate_classifiers.py
search/: search_index.json
security/: index.html
usage/: index.html
(+174 files in other folders)
