[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "cytoscnpy"
description = "High-performance dead code elimination analysis tool for Python."
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Quality Assurance",
    "Dead Code Detection",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.maturin]
bindings = "pyo3"
strip = true
module-name = "cytoscnpy"
python-source = "python"
manifest-path = "cytoscnpy/Cargo.toml"


[project.scripts]
cytoscnpy = "cytoscnpy.cli:main"

[tool.pytest.ini_options]
testpaths = ["python/tests"]
