[package]
name = "cytoscnpy-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cytoscnpy = { path = "../cytoscnpy" }                                # use library crate
cytoscnpy-mcp = { path = "../cytoscnpy-mcp" }                        # MCP server integration
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
rmcp = { version = "0.11.0", features = ["server", "transport-io"] }

# Inherit lints from workspace
[lints]
workspace = true
