[package]
name = "cytoscnpy"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "cytoscnpy"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

# Binary target with different name to avoid collision with library
[[bin]]
name = "cytoscnpy-bin"
path = "src/main.rs"


[dev-dependencies]
tempfile = "3.10"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rustpython-parser = "0.4.0"
rustpython-ast = { version = "0.4.0", features = ["visitor"] }
walkdir = "2.5"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
serde_json = "1.0"
nbformat = "0.15"
regex = "1.10"
anyhow = "1.0"
colored = "3.0"
lazy_static = "1.4"
indicatif = "0.18.3"
comfy-table = "7.1"
pyo3 = { version = "0.27.2", features = ["extension-module"] }
rustc-hash = "2.1.1"

[features]
default = []
# Enable this feature to run Python binding tests (requires Python DLL in PATH)
python-tests = ["pyo3/auto-initialize"]

# Inherit lints from workspace
[lints]
workspace = true
