[package]
name = "cytoscnpy"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "cytoscnpy-bin"

[lib]
name = "cytoscnpy"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

# Binary target with different name to avoid collision with library
[[bin]]
name = "cytoscnpy-bin"
path = "src/main.rs"


[dev-dependencies]
tempfile = "3.10"

[dependencies]
clap = { version = "4.5", default-features = false, features = [
    "derive",
    "std",
    "help",
    "usage",
    "error-context",
    "suggestions",
] }
# ruff v0.14.9 (2025-12-11) - latest stable release
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", rev = "3f63ea4b504d50eaf3c479de68e4017d2434a160" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", rev = "3f63ea4b504d50eaf3c479de68e4017d2434a160" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff.git", rev = "3f63ea4b504d50eaf3c479de68e4017d2434a160" }
# Gitignore-aware file walking (same as ripgrep uses)
# Disable default features to avoid bloat (simd-accel, etc.)
ignore = { version = "0.4", default-features = false }
rayon = "1.10"
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "std",
] }
toml = { version = "0.9", default-features = false, features = [
    "parse",
    "display",
    "serde",
] }
serde_json = { version = "1.0", features = [
    "std",
] } # Restoring default briefly to ensure it works, then trim
nbformat = "0.15"
regex = { version = "1.10", default-features = false, features = [
    "std",
    "unicode-perl",
    "perf",
] }
anyhow = "1.0"
colored = "3.0"
indicatif = "0.18.3"
comfy-table = "7.1"
pyo3 = { version = "0.27.2", features = ["extension-module"], optional = true }
rustc-hash = "2.1.1"
# String optimization: stack-allocated small strings (up to 24 bytes)
compact_str = "0.9"
# Stack-allocated small vectors to avoid heap for small collections
smallvec = "1.15"
# Optional heap profiler
dhat = { version = "0.3", optional = true }
# Tree-sitter for CST parsing (optional, for --fix support)
tree-sitter = { version = "0.26", optional = true }
tree-sitter-python = { version = "0.25", optional = true }
askama = { version = "0.14.0", optional = true }
chrono = { version = "0.4.42", default-features = false, features = [
    "std",
    "clock",
], optional = true }
open = { version = "5.3.3", optional = true }

[features]
default = ["html_report", "cst"]
html_report = ["dep:askama", "dep:chrono", "dep:open"]
# Enable Python bindings (required for building the cdylib)
python-bindings = ["pyo3"]
# Enable this feature to run Python binding tests (requires Python DLL in PATH)
python-tests = ["pyo3/auto-initialize", "python-bindings"]
# Enable heap profiling with dhat
heap-profile = ["dhat"]
# Enable CST-based precise source mapping for --fix support
cst = ["tree-sitter", "tree-sitter-python"]
# Enable CFG-based behavioral validation (deferred, secondary filter)
cfg = []


# Inherit lints from workspace
[lints]
workspace = true
